--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   url_launcher: ^4.0.3
-
+  shared_preferences: ^0.5.6+2
+  flutter_secure_storage: ^3.3.1+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
